# brewtap

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: build.yml
brewtap/: _version.py  app.py  checksum.py  constants.py  formula.py  git.py  readme_updater.py  utils.py
homebrew_releaser/: app.py  checksum.py  constants.py  formula.py  readme_updater.py  utils.py
test/formulas/: test_generate_formula.rb  test_generate_formula_complete_matrix.rb  test_generate_formula_darwin_matrix.rb  test_generate_formula_download_strategy.rb  test_generate_formula_empty_fields.rb  test_generate_formula_formula_includes.rb  test_generate_formula_formula_name_starts_description.rb  test_generate_formula_linux_matrix.rb  test_generate_formula_no_article_description.rb  test_generate_formula_no_depends_on.rb  test_generate_formula_no_test.rb  test_generate_formula_override_version.rb  test_generate_formula_string_false_configs.rb  test_one_of_each_matrix.rb
test/unit/: test_app.py  test_checksum.py  test_formula.py  test_git.py  test_github_action_config.py  test_readme_updater.py  test_utils.py
