[build-system]
requires = [
    "setuptools",
    "incremental>=24.7.2",
    "towncrier>=24.8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "homebrew_releaser"
dynamic = ["version"]

[tool.incremental]

[tool.towncrier]
filename = "CHANGELOG.md"

[tool.black]
preview = true
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
