[build-system]
requires = [
    "setuptools == 75.*",
    "incremental == 24.*",
    "towncrier == 24.*",
]
build-backend = "setuptools.build_meta"

[project]
name = "brewtap"
dynamic = ["version"]
description = 'Release scripts, binaries, and executables directly to Homebrew via GitHub Actions.'
authors = [
    { name = "Mikhail Dzianishchyts", email = "mikhail.dzianishchyts@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chevron == 0.14.*",
    "pretty-tables == 2.*",
    "requests == 2.*",
    "woodchips == 1.*",
]
optional-dependencies.dev = [
    "bandit == 1.7.*",
    "black == 24.*",
    "flake8 == 7.*",
    "isort == 5.*",
    "mypy == 1.10.*",
    "pytest == 8.*",
    "pytest-cov == 5.*",
    "types-requests == 2.*",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://m-dzianishchyts/brewtap"
Issues = "https://m-dzianishchyts/brewtap/issues"

[project.entry-points."console_script"]
"brewtap" = "brewtap.releaser:main"

[tool.setuptools]
packages = ["brewtap"]

[tool.setuptools.package-data]
"brewtap" = ["py.typed"]

[tool.incremental]

[tool.towncrier]
filename = "CHANGELOG.md"

[tool.black]
preview = true
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
